# mfg_drone_by_claudecode

./: .env.production  .gitignore  ARCHITECTURE_DESIGN.md  CLAUDE.md  FAQ_FREQUENTLY_ASKED_QUESTIONS.md  LICENSE  PHASE6_DOCUMENTATION.md  README.md  api_spec_validator.py  docker-compose.prod.yml  phase9_integration_test_report_generator.py  phase9_mcp_migration_tests.py  phase9_migration_completion_report.py  phase9_performance_benchmark.py  phase_g_python_cleanup_evaluation.md  run_phase6_5_complete_verification.py  system_quality_checker.py  test_phase6_5_comprehensive.py
backend/: Dockerfile  PHASE3_ENHANCED_README.md  PHASE5_README.md  README.md  demo_phase3.py  demo_phase3_usage.py  demo_virtual_camera.py  dependencies.py  docker-compose.dev.yml  docker-compose.yml  main.py  nginx.conf  openapi.yaml  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  start_api_server.py  test_imports.py  test_phase3_basic.py  test_requirements.txt
backend/api_server/: __init__.py  main.py  security.py
backend/api_server/api/: __init__.py  dashboard.py  drones.py  enhanced_drones.py  models.py  phase4.py  vision.py  websocket.py
backend/api_server/core/: __init__.py  alert_service.py  camera_service.py  config_service.py  dataset_service.py  drone_factory.py  drone_manager.py  enhanced_drone_manager.py  enhanced_vision_service.py  model_service.py  network_service.py  performance_service.py  system_service.py  tello_edu_controller.py  vision_service.py
backend/api_server/models/: __init__.py  common_models.py  drone_models.py  model_models.py  vision_models.py
backend/config/: drone_config.yaml  test_config.py
backend/doc/: api_specification.md  design_specification.md  glossary.md  mcp_integration_research.md  operation_guide.md  setup_guide.md  system_architecture.md  system_context.md  testing_guide.md  use_cases.md
backend/docs/: API_SERVER_README.md  network_configuration_guide.md  real_drone_api_specification.md  troubleshooting_real_drone.md  user_guide.md
backend/docs/plan/: PHASE2_README.md  PHASE3_ENHANCED_README.md  PHASE3_README.md  PHASE4_README.md  PHASE5_README.md  PHASE6_TELLO_INTEGRATION_README.md
backend/models/: __init__.py  requests.py  responses.py
backend/monitoring/: prometheus.yml
backend/routers/: __init__.py  advanced_movement.py  camera.py  connection.py  flight_control.py  mcp_bridge.py  mission_pad.py  model.py  movement.py  sensors.py  settings.py  system.py  tracking.py
backend/services/: drone_service.py  event_service.py  websocket_service.py
backend/src/: __init__.py
backend/src/config/: __init__.py  camera_config.py  simulation_config.py
backend/src/core/: __init__.py  drone_simulator.py  virtual_camera.py
backend/tests/: __init__.py  conftest.py  test_advanced_movement_api.py  test_api_basic.py  test_camera.py  test_camera_api.py  test_camera_service.py  test_compatibility.py  test_configuration_integration.py  test_connection.py  test_connection_api.py  test_dataset_service.py  test_dependencies_units.py  test_drone_service_units.py  test_drone_simulator.py  test_edge_cases.py  test_enhanced_drone_api.py  test_error_handling.py  test_flight_control.py  test_flight_control_api.py  test_full_workflow_integration.py  test_integration_phase2_phase3.py  test_main_units.py  test_mission_pad_api.py  test_model_management_api.py  test_model_service.py  test_models_units.py  test_movement.py  test_movement_api.py  test_performance.py  test_phase2_performance.py  test_phase3_enhanced_features.py  test_phase3_integration.py  test_phase4_alerts.py  test_phase4_integration.py  test_phase4_performance.py  test_phase4_security.py  test_phase5_dashboard.py  test_phase5_docker.py  test_phase6_real_simulation_switching.py  (+10 more)
backend/tests/fixtures/: __init__.py  drone_factory.py
backend/tests/stubs/: __init__.py  drone_stub.py
backend/tmp/: .gitkeep  execution_instructions.md  implementation_strategies.md  phase1_unit_tests_plan.md  phase2_integration_pi_mock_plan.md  phase3_integration_pi_real_drone_plan.md  phase4_comprehensive_testing_plan.md
backend/web_dashboard/: dashboard.js  index.html  styles.css
mcp-server/: .env.example  Dockerfile  HYBRID_SYSTEM_README.md  MCP_SETUP.md  PHASE1_ANALYSIS.md  PHASE5_COMPLETION_SUMMARY.md  PHASE5_VERIFICATION_REPORT.md  PHASE6_3_DEPLOYMENT.md  README.md  SECURITY_SETUP.md  deploy.sh  docker-compose.yml  mcp_config.json  pyproject.toml  requirements.txt  run_phase2_tests.py  run_phase4_tests.py  run_phase5_tests.py  run_phase5_verification.py  start_hybrid_server.py  start_mcp_server.py  start_mcp_server_unified.py  start_phase4_mcp_server.py  start_phase5_mcp_server.py  test_config_changes.py  test_hybrid_system.py  test_integration.py  test_mcp_server.py  test_week2_security_enhancements.py  test_week3_auth_audit.py  validate_config.py  validate_docs.py  validate_mcp_config.py
mcp-server/config/: __init__.py  logging.py  settings.py
mcp-server/docs/: FAQ.md  MCP_PROTOCOL.md  README.md  SECURITY_SETUP.md  command_reference.md  error_reference.md  setup.md
mcp-server/docs/plan/: PHASE2_README.md  PHASE4_VISION_README.md  PHASE5_README.md  PHASE6_5_COMPLETION_REPORT.md  PHASE6_DOCUMENTATION.md
mcp-server/helm/: Chart.yaml  values.yaml
mcp-server/k8s/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  pvc.yaml  rbac.yaml  secret.yaml  service.yaml
mcp-server/monitoring/: alerts.yml  prometheus.yml
mcp-server/nginx/: nginx.conf
mcp-server/src/: __init__.py  enhanced_main.py  main.py  mcp_main.py  phase4_main.py  phase5_main.py
mcp-server/src/api/: __init__.py  phase4_vision.py
mcp-server/src/core/: __init__.py  audit_service.py  backend_client.py  batch_processor.py  command_router.py  enhanced_command_router.py  nlp_engine.py  (+9 more)
mcp-server/tests/: __init__.py  test_api.py  test_batch_processor.py  test_enhanced_command_router.py  test_enhanced_nlp_engine.py  test_error_handler.py  test_improved_mcp_server.py  test_nlp_engine.py  test_phase4_vision_features.py  test_phase5_integration.py  test_progress_indicator.py  test_security_fixes.py  test_security_utils.py
(+439 files in other folders)
