[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mfg-drone-backend"
version = "1.0.0"
description = "MFG Drone Backend API for Tello EDU automatic tracking system"
authors = [
    {name = "MFG Drone Team"}
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "djitellopy>=2.5.0",
    "opencv-python>=4.10.0",
    "numpy>=2.1.0",
    "pillow>=11.0.0",
    "python-multipart>=0.0.12",
    "aiofiles>=24.1.0",
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true